@@ -1559,6 +1559,7 @@ log_disable_scripts=Disabled script installers $1
 log_enable_scripts=Enabled script installers $1
 log_upgrade_scripts=Upgraded $1 scripts
 log_uninstall_scripts=Uninstalled $1 scripts
+log_warn_scripts=Save script upgrade notification options
 log_plugins=Changed enabled plugins
 log_delete_domains=Deleted $1 virtual servers
 log_modify_domains=Updated $1 virtual servers
@@ -2718,9 +2719,20 @@ newscripts_any=&lt;Any&gt;
 newscripts_tabadd=Add Script
 newscripts_tabenable=Disable Scripts
 newscripts_tabupgrade=Upgrade Scripts
+newscripts_tabwarn=Upgrade Notification
 newscripts_desc1=This form can be used to add script installers that were created by third-party vendors, so that they can be used like those built into Virtualmin.
 newscripts_desc2=This table can be used to de-select scripts that you do not want made available to virtual server owners.
 newscripts_desc3=This form allows you to upgrade a script to the latest version on some or all virtual servers at once. It should be used when security problems are found in older scripts.
+newscripts_desc4=This form can be used to send out automatic email messages to virtual server owners or the master administrator, notifying them of updates available to installed scripts.
+newscripts_wenabled=Send available upgrade notifications?
+newscripts_wemail=Send upgrade notifications to
+newscripts_wowner=Virtual server owners
+newscripts_wreseller=Virtual server resellers
+newscripts_wother=Email address
+newscripts_wheader=Script upgrade notification options
+newscripts_werr=Failed to save upgrade notifications
+newscripts_ewother=Missing or invalid email address to notify
+newscripts_ewnone=Nobody to notify selected
 
 addscripts_err=Failed to add script installer
 addscripts_elocal=Local file does not exist
@@ -3629,3 +3641,12 @@ balancer_epath=Missing or invalid URL path - it must be like / or /foo
 balancer_ebalancer=Missing or invalid balancer name - only letters and numbers are allowed
 balancer_eurl=Invalid destination URL : $1
 balancer_eurls=No destination URLs entered
+
+scriptwarn_header=The following scripts managed by Virtualmin have new versions available :
+scriptwarn_header2=The following scripts managed by Virtualmin have new versions available, in the\nvirtual server $1 :
+scriptwarn_script=Script name
+scriptwarn_ver=New version
+scriptwarn_dom=Domain name
+scriptwarn_where=Upgrades can be done in Virtualmin, on each domains Install Scripts page.
+scriptwarn_where2=Upgrades can be done in Virtualmin, on the page :\n$1
+scriptwarn_subject=Virtualmin script upgrades available
