@@ -695,3 +695,4 @@ Added --alias, --toplevel, --subserver and --subdomain parameters to list-domain
 Added the Excluded Directories page for entering directories not to include in backups for a virtual server.
 Updated the modify-domain.pl script to allow excluded directories to be managed with the --add-exclude and --remove-exclude parameters. Also updated list-domains.pl to show exclusions.
 When enabling or disabling proxying for a domain, existing Apache directives are no longer re-generated from the template.
+Added a new tab to the Script Installers page under System Settings to send daily emails to domain owners, resellers or the master administrator notifying them of scripts that have new versions available.
